# semmacli

./: LICENSE  README.md  index.py  pyproject.toml
src/: index.py  semmatabs.txt
src/semmacli/: __main__.py  semma.py  tabs.py
